Fixes z-index of nav bar to appear above the main page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -117,6 +117,7 @@
         flex-direction: column;
         justify-content: center;
         padding-left: 1rem;
+        z-index: 1;
     }
 
     &__content {
